--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -76,7 +76,11 @@
     {{ $toCSS := (dict "targetPath" "css/styles.css" "outputStyle" "compressed" "enableSourceMap" true) }}
     {{ $postCSS := (dict "config" "assets/config/postcss.config.js") }}
     {{ $styles := resources.Get "sass/styles.scss" | resources.ToCSS $toCSS | resources.PostCSS $postCSS | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}">
+    {{ if .Site.IsServer }}
+        <link rel="stylesheet" href="{{ $styles.Permalink }}">
+    {{ else }}
+        <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}">
+    {{ end }}
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     {{- if eq hugo.Environment "production" }}
